add swag post
